[gd_scene load_steps=18 format=2]

[ext_resource path="res://script/main.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://assets/texture/sablier_3.png" type="Texture" id=3]
[ext_resource path="res://assets/texture/button_pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/texture/button_hover.png" type="Texture" id=5]
[ext_resource path="res://assets/texture/button_normal.png" type="Texture" id=6]
[ext_resource path="res://assets/texture/arrow_intro.png" type="Texture" id=7]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/font/Pacifico-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = SubResource( 1 )

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform float size_x = 0.008;
uniform float size_y = 0.008;

void fragment() {
	vec2 uv = SCREEN_UV;
	uv -= mod(uv, vec2(size_x, size_y));
	
	COLOR.rgb = textureLod(SCREEN_TEXTURE, uv, 0.0).rgb;
}
"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/size_x = 0.008
shader_param/size_y = 0.008

[sub_resource type="SegmentShape2D" id=5]
a = Vector2( 344.261, -477.918 )
b = Vector2( 72.3832, 1.77597 )

[sub_resource type="SegmentShape2D" id=6]
a = Vector2( -341.871, -477.626 )
b = Vector2( -72.1327, 3.06628 )

[sub_resource type="SegmentShape2D" id=7]
b = Vector2( 2000, 0 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://assets/font/Pacifico-Regular.ttf"

[sub_resource type="DynamicFont" id=9]
size = 70
outline_size = 15
outline_color = Color( 0.215686, 0.211765, 0.211765, 1 )
use_filter = true
font_data = SubResource( 8 )

[sub_resource type="Animation" id=10]
resource_name = "intro"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("intro_text:custom_fonts/font:outline_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 1, 1.3, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.215686, 0.211765, 0.211765, 1 ), Color( 0.631373, 0.631373, 0.631373, 1 ), Color( 0.215686, 0.211765, 0.211765, 1 ), Color( 0.215686, 0.211765, 0.211765, 1 ), Color( 0.631373, 0.631373, 0.631373, 1 ), Color( 0.215686, 0.211765, 0.211765, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureProgress:value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 100.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 4, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -62.0
margin_top = -73.0
margin_right = 674.0
margin_bottom = 905.0
color = Color( 0.207843, 0.207843, 0.207843, 1 )

[node name="info_container" type="Node2D" parent="."]

[node name="sand_spawner" type="Node2D" parent="."]

[node name="time" type="Label" parent="."]
margin_left = -851.9
margin_top = -83.6139
margin_right = -568.9
margin_bottom = -50.6139
rect_scale = Vector2( 8.09617, 8.09617 )
custom_fonts/font = SubResource( 2 )
text = "1000"
align = 1
valign = 1

[node name="pixel_filter" type="TextureRect" parent="."]
material = SubResource( 4 )
margin_right = 632.0
margin_bottom = 839.0
rect_scale = Vector2( 0.942116, 0.947341 )
texture = ExtResource( 2 )
expand = true

[node name="sablier" type="Sprite" parent="."]
position = Vector2( 300, 399 )
scale = Vector2( 0.875503, 0.875503 )
texture = ExtResource( 3 )

[node name="sablier_body" type="StaticBody2D" parent="sablier"]

[node name="col_r" type="CollisionShape2D" parent="sablier/sablier_body"]
shape = SubResource( 5 )

[node name="col_l" type="CollisionShape2D" parent="sablier/sablier_body"]
shape = SubResource( 6 )

[node name="sand_delay" type="Timer" parent="sablier"]

[node name="sand_delay_background" type="Timer" parent="sablier"]
wait_time = 0.4
one_shot = true
autostart = true

[node name="TextureButton" type="TextureButton" parent="sablier"]
margin_left = -78.8922
margin_top = -70.3232
margin_right = -38.8922
margin_bottom = -30.3232
rect_scale = Vector2( 3.92601, 3.92601 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
expand = true

[node name="Area2D" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 3.89606, 1056.63 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -661.329, 618.174 )
shape = SubResource( 7 )

[node name="intro" type="Node2D" parent="."]
editor/display_folded = true

[node name="intro_text" type="Label" parent="intro"]
margin_left = 7.86722
margin_top = 515.249
margin_right = 584.867
margin_bottom = 766.249
custom_fonts/font = SubResource( 9 )
text = "press the 
button to earn time "
align = 1

[node name="TextureProgress" type="TextureProgress" parent="intro"]
margin_left = 266.316
margin_top = 443.158
margin_right = 604.316
margin_bottom = 1030.16
rect_scale = Vector2( 0.21462, 0.21462 )
texture_progress = ExtResource( 7 )
fill_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="intro"]
autoplay = "intro"
anims/intro = SubResource( 10 )

[connection signal="timeout" from="sablier/sand_delay" to="." method="_on_sand_delay_timeout"]
[connection signal="timeout" from="sablier/sand_delay_background" to="." method="_on_sand_delay_background_timeout"]
[connection signal="pressed" from="sablier/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
